# StackXchg2PgSQL

./: .gitignore  Cargo.toml  README.md  diesel.toml
.github/workflows/: rust.yml
migrations/2025-04-27-012207_stackxchange/: down.sql  up.sql
src/: errors.rs  main.rs  schema.rs
src/model/: badge.rs  comment.rs  mod.rs  post.rs  tag.rs  user.rs  vote.rs
